--- a/attraction.html
+++ b/attraction.html
@@ -16,7 +16,7 @@
         	<ul class="nav navbar-nav">
           		<li class="icon"><a href="#"><img src="./Images/cab.png"><br>Home</a></li>
           		<li class="icon"><a href="#"><img src="./Images/cab.png"><br>London Eye</a></li>
-          		<li class="icon"><a href="#"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
+          		<li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
           		<li class="icon"><a href="#"><img src="./Images/cab.png"><br>Hyde Park</a></li>
           		<li class="icon"><a href="#"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
           		<li class="icon"><a href="#"><img src="./Images/cab.png"><br>Soho</a></li>
