--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
 	<h1>Tower Bridge</h1>
   <br></br>
 	<div class='polaroid-images'>
+		<div class="row">
+			<div class="col">
+			<a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      			</div>
+			
+			<div class="col">
+				<h2>Place Name</h2>
+      				<h3>Distance from Tower Bridge</h3>
+      				<div class="stars">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
+      					<p>(67 Reviews)</p>
+      				</div>
+      			    <p>Brief description of the place
+      			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+      			</div>
+		</div>
+		
 		<table class='table'>
     		<tr>
       			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
