--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   <br></br>
 	<div class='polaroid-images'>
 		<div class="row">
-			<div class="col">
+			<div class="col-md-4 col-sm-12">
 			<a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       			</div>
 			
-			<div class="col">
+			<div class="col-md-8" col-sm-12>
 				<h2>Place Name</h2>
       				<h3>Distance from Tower Bridge</h3>
       				<div class="stars">
