--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       			</div>
 			
-			<div class="col-md-8" col-sm-12>
+			<div class="col-md-8 col-sm-12">
 				<h2>Place Name</h2>
       				<h3>Distance from Tower Bridge</h3>
       				<div class="stars">
