--- a/attraction.html
+++ b/attraction.html
@@ -9,22 +9,22 @@
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar fixed-top">
-    	<div class="container-fluid">
-      		<div class="navbar-header">
-        		<a class="navbar-brand" href="#">(Un)Known</a>
-      		</div>
-        	<ul class="nav navbar-nav">
-          		<li class="icon"><a href="#"><img src="Images/cab.png"><br>Home</a></li>
-          		<li class="icon"><a href="#"><img src="Images/cab.png"><br>London Eye</a></li>
-          		<li class="icon"><a href="towerbridge.html"><img src="Images/cab.png"><br>Tower Bridge</a></li>
-          		<li class="icon"><a href="#"><img src="Images/cab.png"><br>Hyde Park</a></li>
-          		<li class="icon"><a href="#"><img src="Images/cab.png"><br>Canary Wharf</a></li>
-          		<li class="icon"><a href="#"><img src="Images/cab.png"><br>Soho</a></li>
-          		<li class="icon"><a href="#"><img src="Images/cab.png"><br>Rooftops</a></li>
-         		<li class="icon"><a href="(Un)Known.html#Signup"><img src="Images/cab.png"><br>Sign Up</a></li>
-        	</ul>
-    	</div>
-  	</nav>
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">(Un)Known</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	      <li class="active"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+	    </ul>
+	  </div>
+	</nav>
 	<h2>Place Name</h2>
 	<img height="200" id='main-img' src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" class="center"/></a>
 	<div id="place-info">
