--- a/towerbridge.html
+++ b/towerbridge.html
@@ -9,23 +9,23 @@
 	<title>(Un)Known - Tower Bridge</title>
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">(Un)Known</a>
-      </div>
-        <ul class="nav navbar-nav">
-          <li class="icon"><a href="#"><img src="Images/cab.png"><br>Home</a></li>
-          <li class="icon"><a href="#"><img src="Images/cab.png"><br>London Eye</a></li>
-          <li class="icon"><a href="#"><img src="Images/cab.png"><br>Tower Bridge</a></li>
-          <li class="icon"><a href="#"><img src="Images/cab.png"><br>Hyde Park</a></li>
-          <li class="icon"><a href="#"><img src="Images/cab.png"><br>Canary Wharf</a></li>
-          <li class="icon"><a href="#"><img src="Images/cab.png"><br>Soho</a></li>
-          <li class="icon"><a href="#"><img src="Images/cab.png"><br>Rooftops</a></li>
-          <li class="icon"><a href="(Un)Known.html#Signup"><img src="Images/cab.png"><br>Sign Up</a></li>
-        </ul>
-    </div>
-  </nav>
+ <nav class="navbar navbar-inverse navbar fixed-top">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">(Un)Known</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	      <li class="active"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+	    </ul>
+	  </div>
+	</nav>
 	<h1>Tower Bridge</h1>
   <br></br>
 	<div class='polaroid-images'>
