--- a/towerbridge.html
+++ b/towerbridge.html
@@ -9,29 +9,29 @@
 	<title>(Un)Known - Tower Bridge</title>
 </head>
 <body>
- <nav class="navbar navbar-inverse navbar fixed-top">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">(Un)Known</a>
-	    </div>
-	    <ul class="nav navbar-nav">
-	      <li class="active"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
-	    </ul>
-	  </div>
-	</nav>
+  <nav class="navbar navbar-inverse navbar fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">(Un)Known</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
+        <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+      </ul>
+    </div>
+  </nav>
 	<h1>Tower Bridge</h1>
   <br></br>
 	<div class='polaroid-images'>
 		<table class='table'>
     		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       			<td>
       				<h2>Place Name</h2>
       				<h3>Distance from Tower Bridge</h3>
@@ -46,14 +46,14 @@
       			</td>
     		</tr>
     		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       			<td>
       				<h2>Place Name</h2>
       				<h3>Distance from Tower Bridge</h3>
       				<div class="stars">
-      					<img src="Images/star.png">
-      					<img src="Images/star.png">
-      					<img src="Images/star.png">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
       					<p>(67 Reviews)</p>
       				</div>
       			    <p style="max-width: 700px;">Brief description of the place
@@ -61,14 +61,14 @@
       			</td>
     		</tr>
     		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       			<td>
       				<h2>Place Name</h2>
       				<h3>Distance from Tower Bridge</h3>
       				<div class="stars">
-      					<img src="Images/star.png">
-      					<img src="Images/star.png">
-      					<img src="Images/star.png">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
       					<p>(67 Reviews)</p>
       				</div>
       			    <p style="max-width: 700px;">Brief description of the place
@@ -76,14 +76,14 @@
       			</td>
     		</tr>
     		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       			<td>
       				<h2>Place Name</h2>
       				<h3>Distance from Tower Bridge</h3>
       				<div class="stars">
-      					<img src="Images/star.png">
-      					<img src="Images/star.png">
-      					<img src="Images/star.png">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
+      					<img src="./Images/star.png">
       					<p>(67 Reviews)</p>
       				</div>
       			    <p style="max-width: 700px;">Brief description of the place
