--- a/towerbridge.html
+++ b/towerbridge.html
@@ -26,7 +26,10 @@
       </ul>
     </div>
   </nav>
-	<h1>Tower Bridge</h1>
+  <div id="page_title">
+  	<h1>Tower Bridge</h1>
+    <h2>All these locations are within 1 mile of London Bridge</h2>
+  </div>
   <br></br>
 	<div class='polaroid-images'>
 		<table class='table'>
