--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	      <a class="navbar-brand" href="#">(Un)Known</a>
 	    </div>
 	    <ul class="nav navbar-nav">
-	      <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+	      <li class="icon"><a href="index.html"><img src="./cab.png"><br>Home</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>London Eye</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Soho</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./cab.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
@@ -50,7 +50,7 @@
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner">
 		    <div class="item active">
-		      <img src="./Images/towerbridge.jpg">
+		      <img src="./towerbridge.jpg">
 		      <div class="carousel-caption">
 		        <h3>Big Ben</h3>
 		        <p>Always so much fun!</p>
@@ -58,7 +58,7 @@
 		    </div>
 
 		    <div class="item">
-		      <img src="./Images/towerbridge.jpg">
+		      <img src="./towerbridge.jpg">
 		      <div class="carousel-caption">
 		        <h3>Sky Garden</h3>
 		        <p>So surreal!</p>
@@ -66,7 +66,7 @@
 		    </div>
 
 		    <div class="item">
-		      <img src="./Images/towerbridge.jpg" alt="Piccadilly Circus">
+		      <img src="./towerbridge.jpg" alt="Piccadilly Circus">
 		      <div class="carousel-caption">
 		        <h3>Piccadilly Circus</h3>
 		        <p>The big apple of London!</p>
