changing image locations

--- a/attraction.html
+++ b/attraction.html
@@ -14,25 +14,25 @@
 	      <a class="navbar-brand" href="#">(Un)Known</a>
 	    </div>
 	    <ul class="nav navbar-nav">
-	      <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+	      <li class="icon"><a href="index.html"><img src="./cab.png"><br>Home</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>London Eye</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Soho</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./cab.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./cab.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
 	<h2>Place Name</h2>
-	<img height="200" id='main-img' src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" class="center"/></a>
+	<img height="200" id='main-img' src='./towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" class="center"/></a>
 	<div id="place-info">
 		<h3>Distance from Tower Bridge</h3>
 	    <div class="stars">
-	    	<img src="./Images/star.png">
-	      	<img src="./Images/star.png">
-	      	<img src="./Images/star.png">
+	    	<img src="./star.png">
+	      	<img src="./star.png">
+	      	<img src="./star.png">
 	      	<p>(67 Reviews)</p>
 	    </div>
 	    <p>Brief description of the place. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
@@ -49,7 +49,7 @@
   			<col width="300">
 			<tr>
 				<td>
-					<img id='person-icon' src="./Images/person.png">
+					<img id='person-icon' src="./person.png">
 					<p>Deanna G</p>
 				</td>
 				<td>
@@ -59,7 +59,7 @@
 				<td>
 				</td>
 				<td>
-					<img id='person-icon' src="./Images/person.png">
+					<img id='person-icon' src="./person.png">
 					<p>Deanna G</p>
 				</td>
 				<td>
@@ -69,7 +69,7 @@
 			</tr>
 			<tr>
 				<td>
-					<img id='person-icon' src="./Images/person.png">
+					<img id='person-icon' src="./person.png">
 					<p>Deanna G</p>
 				</td>
 				<td>
@@ -79,7 +79,7 @@
 				<td>
 				</td>
 				<td>
-					<img id='person-icon' src="./Images/person.png">
+					<img id='person-icon' src="./person.png">
 					<p>Deanna G</p>
 				</td>
 				<td>
