--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	      <a class="navbar-brand" href="#">(Un)Known</a>
 	    </div>
 	    <ul class="nav navbar-nav">
-	      <li class="icon"><a href="index.html"><img src="./cab.png"><br>Home</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="cab.png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="cab.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="cab.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="cab.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="cab.png"><br>Soho</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="cab.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="cab.png"><br>Sign Up</a></li>
+	      <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
+-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
+-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
+-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
+-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
+-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
+-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
+-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
