--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 	    </div>
 	    <ul class="nav navbar-nav">
 	      <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
--	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
--	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
--	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
--	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
--	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
--	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
--	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
