--- a/towerbridge.html
+++ b/towerbridge.html
@@ -1,6 +1,7 @@
 <DOCTYPE! html>
 <html>
 <head>
+  <link href="bootsrap_exercise-master/dist/css/bootstrap.css"rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
@@ -31,68 +32,81 @@
   </div>
   <br></br>
 	<div class='polaroid-images'>
-		<table class='table'>
-    		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      			<td>
-      				<h2>Place Name</h2>
-      				<h3>Distance from Tower Bridge</h3>
-      				<div class="stars">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<p>(67 Reviews)</p>
-      				</div>
-      			    <p>Brief description of the place
-      			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      			</td>
-    		</tr>
-    		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      			<td>
-      				<h2>Place Name</h2>
-      				<h3>Distance from Tower Bridge</h3>
-      				<div class="stars">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<p>(67 Reviews)</p>
-      				</div>
-      			    <p style="max-width: 700px;">Brief description of the place
-      			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      			</td>
-    		</tr>
-    		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      			<td>
-      				<h2>Place Name</h2>
-      				<h3>Distance from Tower Bridge</h3>
-      				<div class="stars">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<p>(67 Reviews)</p>
-      				</div>
-      			    <p style="max-width: 700px;">Brief description of the place
-      			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      			</td>
-    		</tr>
-    		<tr>
-      			<td><a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      			<td>
-      				<h2>Place Name</h2>
-      				<h3>Distance from Tower Bridge</h3>
-      				<div class="stars">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<img src="./Images/star.png">
-      					<p>(67 Reviews)</p>
-      				</div>
-      			    <p style="max-width: 700px;">Brief description of the place
-      			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      			</td>
-    		</tr>
-  		</table>
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>Place Name</h2>
+        <h3>Distance from Tower Bridge</h3>
+        <div class="stars">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <p>(67 Reviews)</p>
+        </div>
+        <p>Brief description of the place
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+      </div>
+    </div>
+  </div>
+  <div class='polaroid-images'>
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>Place Name</h2>
+        <h3>Distance from Tower Bridge</h3>
+        <div class="stars">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <p>(67 Reviews)</p>
+        </div>
+        <p>Brief description of the place
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+      </div>
+    </div>
+  </div>
+  <div class='polaroid-images'>
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>Place Name</h2>
+        <h3>Distance from Tower Bridge</h3>
+        <div class="stars">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <p>(67 Reviews)</p>
+        </div>
+        <p>Brief description of the place
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+      </div>
+    </div>
+  </div>
+  <div class='polaroid-images'>
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>Place Name</h2>
+        <h3>Distance from Tower Bridge</h3>
+        <div class="stars">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <p>(67 Reviews)</p>
+        </div>
+        <p>Brief description of the place
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+      </div>
+    </div>
+  </div>
 	</div>
 </body>
 </html>
