--- a/towerbridge.html
+++ b/towerbridge.html
@@ -31,9 +31,10 @@
     <h2>All these locations are within 1 mile of London Bridge</h2>
   </div>
   <br></br>
-	<div class='polaroid-images'>
+  <div class='polaroid-images'>
     <div class="row">
-      <div class="col-md-4 col-sm-12">
+      <div class='col-md-1'>
+      <div class="col-md-3 col-sm-12">
         <a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
