--- a/towerbridge.html
+++ b/towerbridge.html
@@ -34,6 +34,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class='col-md-2'>
+      </div>
       <div class="col-md-2 col-sm-12">
         <a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
