--- a/towerbridge.html
+++ b/towerbridge.html
@@ -33,7 +33,7 @@
   <br></br>
   <div class='polaroid-images'>
     <div class="row">
-      <div class="col-md-4 col-sm-12" text-right>
+      <div class="col-md-4 col-sm-12">
         <a href="./attraction.html" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
