--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 	      <a class="active navbar-brand " href="#">(Un)Known</a>
 	    </div >
 	    <ul class="nav navbar-nav">
-<!-- 	      <li class="active"><a href="#"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-	      <li class="icon"><a href="#"><img src=".Images/london-eye (1).png"><br>London Eye</a></li>
-	      <li class="icon"><a href="#"><img src=".Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="#"><img src=".Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="#"><img src=".Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="#"><img src=".Images/icons8-musical-notes-32.png"><br>Soho</a></li>
-	      <li class="icon"><a href="#"><img src=".Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src=".Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+<!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
