--- a/towerbridge.html
+++ b/towerbridge.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand" href="#">(Un)Known</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li>
+        <!-- <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li> -->
         <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
         <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
         <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
