--- a/attraction.html
+++ b/attraction.html
@@ -8,20 +8,20 @@
 	<title>(Un)Known - Place</title>
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar fixed-top">
-	  <div class="container-fluid">
+	<nav class="navbar-inverse navbar-fixed-top">
+	  <div class="container-fluid mx-auto">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">(Un)Known</a>
-	    </div>
+	      <a class="active navbar-brand " href="#">(Un)Known</a>
+	    </div >
 	    <ul class="nav navbar-nav">
-	      <!-- <li class="icon"><a href="index.html"><img src="./Images/cab.png"><br>Home</a></li> -->
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Soho</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/cab.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/cab.png"><br>Sign Up</a></li>
+<!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
+	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
