--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<nav class="navbar-inverse navbar-fixed-top">
 	  <div class="nav-info mx-auto">
-	    <div class="navbar-header">
+	    <div id="bootstrap-overrides" class="navbar-header">
 	      <a class="active navbar-brand " href="#">(Un)Known</a>
 	    </div >
 	    <ul class="nav navbar-nav">
