--- a/towerbridge.html
+++ b/towerbridge.html
@@ -25,7 +25,7 @@
 	    </div >
 	    <ul class="nav navbar-nav">
 <!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
+	      <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
