--- a/towerbridge.html
+++ b/towerbridge.html
@@ -49,7 +49,7 @@
 
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Hays Galeria</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -57,8 +57,13 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+	<ul>
+		<li>Open air shopping and cafes</li>
+		<li>Old fashioned atmospheric market stalls everything from London souvenirs to with good quality jewellery and leather goods</li>
+		<li>Fountain in the centre - 60-foot sculpture by artist David Kemp was installed in 1987</li>
+		<li>View of the Thames, sky garden, and other skyscrapers including the Gherkin</li>
+		<li>Access to the riverbank of the Thames</li>
+	</ul>
       </div>
     </div>
   </div>
