--- a/towerbridge.html
+++ b/towerbridge.html
@@ -56,13 +56,12 @@
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
-        </div>
-	<ul>
-		<li>Open air shopping and cafes</li>
-		<li>Old fashioned atmospheric market stalls everything from London souvenirs to with good quality jewellery and leather goods</li>
-		<li>Fountain in the centre - 60-foot sculpture by artist David Kemp was installed in 1987</li>
-		<li>View of the Thames, sky garden, and other skyscrapers including the Gherkin</li>
-		<li>Access to the riverbank of the Thames</li>
+	</div>
+	<p>- Open air shopping and cafes</p>
+	<p>- Old fashioned atmospheric market stalls everything from London souvenirs to with good quality jewellery and leather goods</p>
+	<p>- Fountain in the centre - 60-foot sculpture by artist David Kemp was installed in 1987</p>
+	<p>- View of the Thames, sky garden, and other skyscrapers including the Gherkin</p>
+	<p>- Access to the riverbank of the Thames</p>
 	</ul>
       </div>
     </div>
