--- a/towerbridge.html
+++ b/towerbridge.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Science Gallery</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -82,8 +82,10 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+	<div id="bullet-points">
+		&bull; Gallery of Exhibitions, events performances and festivals that combine technology, science, art and sound<br/>
+		&bull; Collaboration between King’s College London University of London and Science Gallery International to create a unique exhibition<br/>
+	</div>
       </div>
     </div>
   </div>
@@ -93,7 +95,7 @@
         <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>London Glassblowing</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -101,31 +103,15 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+	<div id="bullet-points">
+		&bull; One of the top glassblowing houses in Europe<br/>
+		&bull; Exhibitions from resident artists<br/>
+		&bull; Glass blowing demonstrations <br/>
+		&bull; Possible to take classes taught by professionals (but very expensive and must be booked well in advance)<br/>
+	</div>
       </div>
     </div>
   </div>
-  <div class='polaroid-images'>
-    <div class="row">
-      <div class="col-md-4 col-sm-12">
-        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
-        <h3>Distance from Tower Bridge</h3>
-        <div class="stars">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <p>(67 Reviews)</p>
-        </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      </div>
-    </div>
-  </div>
-
   </div>
   
 
