--- a/hydepark.html
+++ b/hydepark.html
@@ -49,7 +49,7 @@
 
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Aplsey House</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -57,8 +57,14 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+      	<div id="bullet-points">
+		&bull; National Trust Georgian mansion<br/>
+		&bull; Decor has hardly changed since it was owned by the conquerer of Napoleon, the Duke of Wellington, in the Battle of Waterloo 1815<br/>
+		&bull; History and architecture go back even further than the Duke of Wellington<br/>
+		&bull; Gifts from Emperors and Royalty on display<br/>
+		&bull; Art collection<br/>
+		&bull; Multimedia guided tour<br/>
+	</div>
       </div>
     </div>
   </div>
@@ -69,7 +75,7 @@
       </div>
 
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Serpentine Gallery</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -77,8 +83,11 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+        <div id="bullet-points">
+		&bull; Small art gallery<br/>
+		&bull; Exhibits on either side of Lake Serpentine which runs through Hyde Park Kensington<br/>
+		&bull; Constant changeover of popup exhibitions by different artists working with different mediums and styles<br/>
+	</div>
       </div>
     </div>
   </div>
@@ -88,7 +97,7 @@
         <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Summer of Sound On The Roof </h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -96,31 +105,15 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+       	<div id="bullet-points">
+		&bull; Oxford Circus John Lewis Rooftop attraction<br/>
+		&bull; Venue for music - daytime gigs and DJ sets, street food pop ups and crazy golf throughout the summer<br/>
+		&bull; Pop up stalls<br/>
+		&bull; Musicians vary each day so check the schedule on the John Lewis website to see who is playing when<br/>
+	</div>
       </div>
     </div>
   </div>
-  <div class='polaroid-images'>
-    <div class="row">
-      <div class="col-md-4 col-sm-12">
-        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
-        <h3>Distance from Tower Bridge</h3>
-        <div class="stars">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <p>(67 Reviews)</p>
-        </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      </div>
-    </div>
-  </div>
-
   </div>
   
 
