--- a/soho.html
+++ b/soho.html
@@ -49,7 +49,7 @@
 
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Second Hand Book Shopping</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -57,8 +57,12 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+        <div id="bullet-points">
+		&bull; Charing Cross Road has 3 Second hand bookshops on one parade: <a href="http://www.anyamountofbooks.com">Any Amount of Books</a>, <a href="http://www.henrypordesbooks.com/www/index.php">Henry Pordes</a> and <a href="http://quintobookshop.co.uk">Quinto’s Bookshop</a> (based in the basement of Francis Edwards Antique and Rare books)<br/>
+		&bull; Most books £4 and under<br/>
+		&bull; Any Amount of Books periodically has basement sales where any book Is £1 or 5 books for £4 - check their social media for basement sale announcements if interested<br/>
+		&bull; Quinto’s restocks completely each month<br/>
+	</div>
       </div>
     </div>
   </div>
@@ -69,7 +73,7 @@
       </div>
 
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Live Music Every Day in Covent Garden</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -77,8 +81,11 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+        <div id="bullet-points">
+		&bull; Either opera or musicians live every day in the shopping complex between the streets and the Jubilee market, one level below street level<br/>
+		&bull; Not particularly crowded <br/>
+		&bull; Good acoustics<br/>
+	</div>
       </div>
     </div>
   </div>
@@ -88,7 +95,7 @@
         <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>House of MinaLima</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -96,8 +103,12 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+	<div id="bullet-points">
+		&bull; 4 floors - of exhibitions of the work by the graphic designers of the Warner Brothers Harry Potter and Fantastic Beasts franchises and 1 floor gift shop<br/>
+		&bull; See props, designs, artwork and photos from both Fantastic Beasts and Where to find them and the Harry Potter Franchises<br/>
+		&bull; Gift Shop with signed merchandise and prop replicas as well as limited edition prints<br/>
+		&bull; Miraphora MIna and Eduardo Lima (the graphic designers) often pop in and surprise visitors<br/>
+	</div>
       </div>
     </div>
   </div>
@@ -107,7 +118,7 @@
         <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Golden Square</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -115,10 +126,33 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+        <div id="bullet-points">
+		&bull; Square gardens with lawns and shrubs<br/>
+		&bull; Statue of George II on a plinth - one of the only two public statues of George II in the capital<br/>
+		&bull; Thought to have been laid out according to plans by Sir Christopher Wren, around the year 1670s<br/>
+	</div>
       </div>
     </div>
+    <div class='polaroid-images'>
+     <div class="row">
+       <div class="col-md-4 col-sm-12">
+         <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+       </div>
+       <div class="col-md-6 col-sm-12">
+         <h2>Forbidden Planet London</h2>
+         <h3>Distance from Tower Bridge</h3>
+         <div class="stars">
+           <img src="./Images/star.png">
+           <img src="./Images/star.png">
+           <img src="./Images/star.png">
+           <p>(67 Reviews)</p>
+         </div>
+         <div id="bullet-points">
+	 	&bull; Megastore from the world’s largest and best-known science fiction, fantasy and cult entertainment retailer<br/>
+	 	&bull; Selling sci-fi books, comics, dvds and collectables etc<br/>
+	 </div>
+       </div>
+     </div>
   </div>
 
   </div>
