--- a/soho.html
+++ b/soho.html
@@ -58,7 +58,7 @@
           <p>(67 Reviews)</p>
         </div>
         <div id="bullet-points">
-		&bull; Charing Cross Road has 3 Second hand bookshops on one parade: <a href="http://www.anyamountofbooks.com">Any Amount of Books</a>, <a href="http://www.henrypordesbooks.com/www/index.php">Henry Pordes</a> and <a href="http://quintobookshop.co.uk">Quinto’s Bookshop</a> (based in the basement of Francis Edwards Antique and Rare books)<br/>
+		&bull; Charing Cross Road has 3 Second hand bookshops on one parade: Any Amount of Books, Henry Pordes and Quinto’s Bookshop (based in the basement of Francis Edwards Antique and Rare books)<br/>
 		&bull; Most books £4 and under<br/>
 		&bull; Any Amount of Books periodically has basement sales where any book Is £1 or 5 books for £4 - check their social media for basement sale announcements if interested<br/>
 		&bull; Quinto’s restocks completely each month<br/>
